--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "0.16.2",
+    "echarts": "^3.6.2",
     "element-ui": "1.3.7",
+    "iview": "^2.0.0-rc.19",
     "js-cookie": "^2.1.4",
     "normalize.css": "3.0.2",
     "nprogress": "^0.2.0",
