--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "ajax": "^0.0.4",
     "axios": "0.16.2",
     "echarts": "^3.6.2",
     "element-ui": "1.3.7",
@@ -20,6 +21,7 @@
     "nprogress": "^0.2.0",
     "screenfull": "^3.3.1",
     "vue": "2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "2.5.3",
     "vuex": "2.3.1"
   },
